init: start new task css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>My firs project</title>
      <meta name="description" content=" короткий опис сторінки">
   </head>
+  <h1>This will be my cv</h1>
   <body>
   </body>
 
