--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>My firs project</title>
      <meta name="description" content=" короткий опис сторінки">
+     <link rel="stylesheet" href=”style.css ”/>
   </head>
   <h1>This will be my cv</h1>
   <body>
