--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>My firs project</title>
      <meta name="description" content=" короткий опис сторінки">
-     <link rel="stylesheet" href=”style.css ”/>
+     <link rel="stylesheet"  type="text/css"  href="style.css "/>
   </head>
-  <h1>This will be my cv</h1>
+  <h1 class="hcent">This will be my cv</h1>
   <body>
   </body>
 
