--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
-    <title>My firs project</title>
-     <meta name="description" content=" короткий опис сторінки">
-     <link rel="stylesheet"  type="text/css"  href="style.css "/>
-  </head>
-  <h1 class="hcent">This will be my cv</h1>
-  <body>
-  </body>
-
- </html>
-
+    <meta name="description" content="text">
+</head>
+<body>
+</body>
+</html>
